--- a/garden.html
+++ b/garden.html
@@ -4,26 +4,26 @@
         <!-- Primary Meta Tags -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>links • will widjaja</title>
-        <meta name="title" content="wid's bookmarks">
+        <title>garden • will widjaja</title>
+        <meta name="title" content="wid's garden">
         <meta name="description"
-            content="My bookmarks for sites I have found to be useful or would like to give credit to.">
+            content="My digital garden contains my notes, thoughts, and original articles.">
         <link rel="preload" href="assets/fonts/DMSans-Regular.ttf" as="font"
             type="font/ttf" crossorigin="anonymous">
 
         <!-- Open Graph -->
         <meta property="og:url" content="https://wwidjaja.dev/">
-        <meta property="og:title" content="wid's bookmarks">
+        <meta property="og:title" content="wid's garden">
         <meta property="og:description"
-            content="My bookmarks for sites.">
+            content="My digital garden contains my notes, thoughts, and original articles.">
         <meta property="og:image"
             content="https://wwidjaja.dev/assets/imgs/opengraph.png">
 
         <!-- X (Twitter) -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:title" content="wid's bookmarks">
+        <meta property="twitter:title" content="wid's garden">
         <meta property="twitter:description"
-            content="My bookmarks for sites.">
+            content="My digital garden contains my notes, thoughts, and original articles.">
         <meta property="twitter:image"
             content="https://wwidjaja.dev/assets/imgs/opengraph.png">
 
@@ -80,42 +80,16 @@
         <main>
             <div>
                 <main-header>
-                    <h2>/links</h2>
-                    <p>Here are some external links that helped me do some of my
-                        <a
-                            href="work.html">work</a>.</p>
+                    <h2>/garden</h2>
+                    <blockquote>
+                        <p>"Welcome to the jungle"</p>
+                        <footer>— xQc, <cite>after getting his first
+                                sub</cite></footer>
+                    </blockquote>
                 </main-header>
                 <section>
-                    <h3>/links - This Website</h3>
-                    <h4>Tools I Used</h4>
-                    <ul>
-                        <li><a href="https://favicon.io/favicon-converter/"
-                                target="_blank">https://favicon.io/favicon-converter/</a></li>
-                        <li><a href="https://metatags.io/"
-                                target="_blank">https://metatags.io/</a></li>
-                        <li><a href="https://www.realtimecolors.com/"
-                                target="_blank">https://www.realtimecolors.com/</a></li>
-                    </ul>
-                    <h4>Inspiration</h4>
-                    <p>Some of these were heavy inspirations for the beginnings
-                        of
-                        my site. Thank you for providing the world with this
-                        talent.</p>
-                    <ul>
-                        <li><a href="https://rknight.me/"
-                                target="_blank">https://rknight.me/</a></li>
-                        <li><a href="https://jarema.me/"
-                                target="_blank">https://jarema.me/</a></li>
-                        <li><a href="https://freeplay.floof.company/"
-                                target="_blank">https://freeplay.floof.company/</a></li>
-                    </ul>
-                </section>
-                <section>
-                    <h3>/links - Other Websites I Think Are Cool</h3>
-                    <ul>
-                        <li><a href="https://owltastic.com/work.html"
-                                target="_blank">https://owltastic.com/work.html</a></li>
-                    </ul>
+                    <h3>2025</h3>
+                    <p>Ideally a blog post would go here.</p>
                 </section>
             </div>
             <footer>
@@ -128,7 +102,7 @@
                     </ul>
                 </nav>
                 <p>&copy; 2025 William Widjaja</p>
-                <p>tread lightly</p>
+                <p>remember to comment, like, and subscribe!</p>
             </footer>
         </main>
     </body>
