--- a/now.html
+++ b/now.html
@@ -8,6 +8,8 @@
         <meta name="title" content="now">
         <meta name="description"
             content="What am I doing right now?">
+        <link rel="preload" href="assets/fonts/DMSans-Regular.ttf" as="font"
+            type="font/ttf" crossorigin="anonymous">
 
         <!-- Open Graph -->
         <meta property="og:url" content="https://wwidjaja.dev/">
@@ -34,77 +36,69 @@
             href="assets/icons/favicon-16x16.png">
         <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
-        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/main.css" media="screen">
         <link rel="manifest" href="assets/icons/site.webmanifest">
+        <style>
+            /* to avoid "Default styles for h1 elements are changing" */
+            h1 {
+                font-size: 2.5rem;
+            }
+        </style>
     </head>
     <body>
         <header>
-            <a href="/">
-                <img src="favicon.ico" alt="Widjaja's Logo" width="48px"
-                    height="48px">
-                <h1>William Widjaja</h1>
-            </a>
             <nav>
-                <ul>
-                    <li><a href="about.html">about</a></li>
-                    <li><a href="jungle.html">jungle</a></li>
-                    <li><a href="now.html">now</a></li>
-                    <li><a href="usual.html">usual</a></li>
-                    <li><a href="work.html">work</a></li>
-                </ul>
+                <top-nav>
+                    <a id="brand" href="/">
+                        <img src="/favicon.ico" alt="Widjaja's Logo" width="48px"
+                            height="48px">
+                        <h1 hidden>William Widjaja</h1>
+                        <span><span>William</span> Widjaja</span>
+                    </a>
+                </top-nav>
+                <bottom-nav>
+                    <input type="checkbox" id="menu-toggle" hidden>
+                    <label for="menu-toggle" class="hamburger"
+                        aria-label="Toggle menu">
+                        <svg viewBox="0 0 100 40" width="30" height="30"
+                            aria-hidden="true">
+                            <rect width="100" height="10"></rect>
+                            <rect y="30" width="100" height="10"></rect>
+                            <rect y="60" width="100" height="10"></rect>
+                        </svg>
+                    </label>
+                    <ul class="menu">
+                        <li><a href="about.html">about</a></li>
+                        <li><a href="garden.html">garden</a></li>
+                        <li><a href="now.html">now</a></li>
+                        <li><a href="contact.html">contact</a></li>
+                        <li><a href="work.html">work</a></li>
+                    </ul>
+                </bottom-nav>
             </nav>
         </header>
         <main>
-            <main-header>
-                <h2>/now</h2>
-                <p>What am I up to right now?</p>
-            </main-header>
-            <aside>Last updated July 2025.</aside>
-            <p>Right now <strong>I'm making this website.</strong></p>
-            <p>I'm using a mix of all <em>the most basic web
-                    technologies.</em></p>
-            <p>This includes, <dfn><a href="#html-def"><abbr
-                            title="Hypertext Markup Language">HTML</abbr></a></dfn>
-                (Hypertext Markup Language),
-                <abbr>CSS</abbr> (Cascading Style Sheets), and <abbr>JS</abbr>
-                (JavaScript).</p>
-
-            <dl>
-                <dt id="html-def">HTML</dt>
-                <dd>Hypertext Markup Language, the living language for creating
-                    web pages.</dd>
-            </dl>
-
-            <pre>
-<code>> print(moose)</code>
-
-~~(__^·>
-            </pre>
-
-            <p>Here is a cool music video from a movie I've watched recently:</p>
-            <iframe width="350" height="200"
-                src="https://www.youtube-nocookie.com/embed/QGsevnbItdU?si=LqO8rdK2lrVv5QYF&amp;controls=0"
-                title="How It's Done Official Lyric Video" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin"
-                allowfullscreen></iframe>
-            
-            <video controls width="350">
-                <source src="assets/video/1secondvideo.mp4">
-                A one second video.
-            </video>
-            <hr>
+            <div>
+                <main-header>
+                    <h2>/now</h2>
+                    <p>What am I up to right now?</p>
+                </main-header>
+                <aside>Last updated July 2025.</aside>
+                <h3>HW 3</h3>
+            </div>
+            <footer>
+                <nav>
+                    <ul>
+                        <li><a href="links.html">links</a></li>
+                        <li><a href="usual.html">usual</a></li>
+                        <li><a href="verify.html">verify</a></li>
+                        <li><a href="wish.html">wish</a></li>
+                    </ul>
+                </nav>
+                <p>&copy; 2025 William Widjaja</p>
+                <p><span lang="fr">Déjà vu.</span> I've just been in this place
+                    before...</p>
+            </footer>
         </main>
-        <footer>
-            <ul>
-                <li><a href="links.html">links</a></li>
-                <li><a href="contact.html">contact</a></li>
-                <li><a href="verify.html">verify</a></li>
-                <li><a href="wish.html">wish</a></li>
-            </ul>
-            <p>&copy; 2025 William Widjaja</p>
-            <p><span lang="fr">Déjà vu.</span> I've just been in this place
-                before...</p>
-        </footer>
     </body>
 </html>
