--- a/form-no-js.html
+++ b/form-no-js.html
@@ -8,8 +8,6 @@
         <meta name="title" content="contact wid">
         <meta name="description"
             content="Ways to reach out to me.">
-        <link rel="preload" href="assets/fonts/DMSans-Regular.ttf" as="font"
-            type="font/ttf" crossorigin="anonymous">
 
         <!-- Open Graph -->
         <meta property="og:url" content="https://wwidjaja.dev/">
@@ -38,6 +36,8 @@
 
         <link rel="stylesheet" href="assets/css/main.css" media="screen">
         <link rel="manifest" href="assets/icons/site.webmanifest">
+        <link rel="preload" href="assets/fonts/DMSans-Regular.ttf" as="font"
+            type="font/ttf" crossorigin="anonymous">
         <style>
             /* to avoid "Default styles for h1 elements are changing" */
             h1 {
@@ -63,6 +63,17 @@
                     width: 80%;
                     border: 1px dashed black;
                     border-radius: 0.25rem;
+                }
+
+                /* if supported, use :user-invalid */
+                @supports not selector(:user-invalid) {
+                    :invalid {
+                        border: 4px solid red;
+                    }
+                }
+
+                :user-invalid {
+                    border: 4px solid red;
                 }
 
                 .required-label::after {
@@ -151,17 +162,14 @@
                             <label for="name" class="required-label">Full name:
                             </label>
                             <input id="name" name="name" type="text"
-                                placeholder="Your full name" required>
-                            <output name="name_error" for="name"></output>
-                            <output name="name_info" for="name"></output>
+                                placeholder="Your full name"
+                                minlength="1" pattern="^(?! )[A-Za-z0-9 ]+$" required>
                         </form-field>
                         <form-field>
                             <label for="email" class="required-label">Your
                                 email: </label>
                             <input id="email" name="email" type="email"
                                 placeholder="Your email" required>
-                            <output name="email_error" for="email"></output>
-                            <output name="email_info" for="email"></output>
                         </form-field>
                         <form-field>
                             <label for="message" class="required-label">Your
@@ -170,9 +178,11 @@
                                 minlength="5"
                                 placeholder="Write me a message..."
                                 required></textarea>
-                            <output name="message_error" for="message"></output>
-                            <output name="message_info" for="message"></output>
                         </form-field>
+                        <output name="error_output"
+                            for="name email message"></output>
+                        <output name="info_output"
+                            for="name email message"></output>
                         <input id="possible_bot" name="possible_bot"
                             type="hidden" value="true">
                         <button type="submit">Submit</button>
