finished hw4 parts 1-4

--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
         <link rel="preload" href="assets/fonts/DMSans-Regular.ttf" as="font"
             type="font/ttf" crossorigin="anonymous">
         <script src="scripts/form.js" defer></script>
+        <script src="scripts/main.js" defer></script>
         <style>
             /* to avoid "Default styles for h1 elements are changing" */
             h1 {
@@ -146,6 +147,10 @@
                         <li><a href="now.html">now</a></li>
                         <li><a href="contact.html">contact</a></li>
                         <li><a href="work.html">work</a></li>
+                        <button type="button" hidden data-theme-toggle>
+                            <img src="assets/icons/sun.svg"
+                                alt="Theme change button">
+                        </button>
                     </ul>
                 </bottom-nav>
             </nav>
@@ -201,7 +206,7 @@
                         <input id="possible_bot" name="possible_bot"
                             type="hidden" value="true">
                         <input id="form_errors" name="form_errors"
-                            type="hidden" value="">
+                            type="hidden" value>
                         <button type="submit">Submit</button>
                     </fieldset>
                 </form>
@@ -217,6 +222,9 @@
                 </nav>
                 <p>&copy; 2025 William Widjaja</p>
                 <p>reach out!</p>
+                <noscript>This website's theme already automatically switches
+                    based on system preferences even though JavaScript is
+                    disabled.</noscript>
             </footer>
         </main>
     </body>
